# rummikub-solver

./: CLAUDE.md  Cargo.toml  HUMAN_READABLE_MOVES.md  LICENSE  README.md  app.js  build.rs  index.html  solver-worker.js  styles.css
.github/workflows/: deploy.yml
examples/: demo.rs
src/: lib.rs  main.rs  solver.rs  wasm_api.rs
